small alignment fix

--- a/webapp/src/registerDog/ImageUpload.css
+++ b/webapp/src/registerDog/ImageUpload.css
@@ -84,8 +84,8 @@
   
   .image {
       border-radius: 10px;
-    width: 250px;
-    height:250px;
+    width: 320px;
+    height:260px;
     margin: 2px 2px 40px 2px;
     display:fill;
     align-self: center;
